# hanamikoji

./: .gitignore  convert.py  evaluate.py  generate_eval_data.py  get_most_recent.sh  jano2.txt  play.py  server.py  train.py  useful_commands
cpp/: CMakeLists.txt
cpp/scripts/: build.sh  configure.sh
cpp/src/: CMakeLists.txt  DeepAgent.h  Features.h  Game.h  Human.h  IPlayer.h  IPlayers.h  RandomAgent.h  RandomPlayer.h  WebSocketClient.h  WebSocketServer.h  features.h  game.h  main.cpp  movegen.h
hanamikoji/dmc/: arguments.py  dmc.py  env_utils.py  models.py  models_clean.py  utils.py
hanamikoji/env/: env.py  game.py  move_generator.py
hanamikoji/evaluation/: deep_agent.py  human.py  random_agent.py  simulation.py
make_consistent/: consistent.txt  inconsistent.txt  main.cpp
make_png/: generate_image_with_scores.py
